// Vitest Snapshot v1

exports[`PasswordResetRequestAcknowledge > matches snapshot in en 1`] = `
<div
  class="page auth password-reset-acknowledge"
  data-v-92e92a88=""
>
  <h1
    data-v-92e92a88=""
  >
    Resetting your password 
    <!---->
  </h1>
  <div
    class="toolbar"
    data-v-92e92a88=""
  >
    
    
  </div>
  
  <main>
    <p
      class="acknowledge"
    >
      We are processing your request to reset the password for email 
      <span
        class="email"
      />
      . If a user account exists for this email address, it will receive in the next few minutes an email containing instructions on how to reset their password.
    </p>
    <nav
      class="links"
    >
      <a>
        <button
          class="loading-button"
          data-v-3fdbc7b3=""
        >
          <div
            class="label"
            data-v-3fdbc7b3=""
          >
            <span
              data-v-3fdbc7b3=""
            >
              Return to Login page
            </span>
          </div>
          <!---->
        </button>
      </a>
    </nav>
    <p
      class="redirect"
    >
      Redirecting automatically in 
      <span
        class="seconds"
      >
        0
      </span>
       seconds
    </p>
  </main>
  
</div>
`;

exports[`PasswordResetRequestAcknowledge > matches snapshot in fr 1`] = `
<div
  class="page auth password-reset-acknowledge"
  data-v-92e92a88=""
>
  <h1
    data-v-92e92a88=""
  >
    Réinitialisation de votre mot de passe 
    <!---->
  </h1>
  <div
    class="toolbar"
    data-v-92e92a88=""
  >
    
    
  </div>
  
  <main>
    <p
      class="acknowledge"
    >
      Nous traitons votre demande de réinitialisation du mot de passe pour l'adresse 
      <span
        class="email"
      />
      . Si un compte existe pour cette adresse, elle recevra dans les minutes qui viennent un courriel contenant les instructions pour la réinitialisation de leur mot de passe.
    </p>
    <nav
      class="links"
    >
      <a>
        <button
          class="loading-button"
          data-v-3fdbc7b3=""
        >
          <div
            class="label"
            data-v-3fdbc7b3=""
          >
            <span
              data-v-3fdbc7b3=""
            >
              Retourner à la page de connexion
            </span>
          </div>
          <!---->
        </button>
      </a>
    </nav>
    <p
      class="redirect"
    >
      Retour automatique dans 
      <span
        class="seconds"
      >
        0
      </span>
       secondes
    </p>
  </main>
  
</div>
`;
